--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,3 +1,6 @@
+$tablet-beakpoint: 481px;
+$desktop-breakpoint: 769px;
+
 :root {
   --raleway-font-family: "Raleway", sans-serif;
   --roboto-font-family: "Roboto", sans-serif;
