--- a/sass/sections/_detail.scss
+++ b/sass/sections/_detail.scss
@@ -18,15 +18,6 @@
     justify-content: center;
     width: 100%;
   }
-  &__text span {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #212121;
-  }
   &__text {
     display: inherit;
     margin: 0;
@@ -39,5 +30,14 @@
     letter-spacing: 0.03em;
     width: 100%;
     gap: 10px;
+    & span {
+      font-style: normal;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 1.14;
+      letter-spacing: 0.03em;
+      text-transform: uppercase;
+      color: #212121;
+    }
   }
 }
