--- a/sass/sections/_header.scss
+++ b/sass/sections/_header.scss
@@ -71,3 +71,27 @@ a.active {
   text-decoration: none;
   color: #757575;
 }
+
+.icon-menu {
+  display: none;
+}
+@media screen and (max-width: 480px) {
+  .header-text.links,
+  .header-address {
+    display: none;
+  }
+
+  .container.header-text {
+    max-width: 100%;
+    height: 60px;
+    justify-content: space-between;
+  }
+  .icon-menu {
+    display: block;
+    cursor: pointer;
+    margin-right: 15px;
+  }
+  .header-logo {
+    margin-left: 15px;
+  }
+}
