--- a/sass/base/_buttons.scss
+++ b/sass/base/_buttons.scss
@@ -1,6 +1,7 @@
 .button {
+  width: 200px;
+  height: 50px;
   background: var(--blue);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   color: var(--white);
   font-family: "Roboto";
@@ -113,5 +114,25 @@
         0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
       border-radius: 4px;
     }
+  }
+}
+
+/* Menu */
+.toggle-button {
+  padding: 0;
+  border-radius: 4px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  border: none;
+  background-color: var(--white);
+  &:hover,
+  &:focus {
+    background: var(--white);
+    color: var(--blue);
+    cursor: pointer;
   }
 }
