--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 @import "./base/variables";
 @import "./base/buttons";
-@import "./sections/modal";
+@import "./modals/modal";
 @import "./base/fonts";
 @import "./sections/contacts";
 @import "./base/common.scss";
@@ -13,4 +13,4 @@
 @import "./sections/team";
 @import "./sections/customers";
 @import "./sections/portfolio";
-@import "./base/menu";
+@import "./modals/menu";
