--- a/sass/modals/_modal.scss
+++ b/sass/modals/_modal.scss
@@ -1,4 +1,34 @@
 /* Modal */
+.backdrop {
+  background-color: rgba(0, 0, 0, 0.2);
+  position: fixed;
+  z-index: 3;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: visibility, opacity;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+}
+
+.backdrop.is-hidden {
+  transform: scale(0);
+  background-color: var(--white);
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  position: absolute;
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
 
 .modal {
   border-radius: 4px;
@@ -153,9 +183,22 @@ textarea {
   display: flex;
   margin-top: 25px;
   &__button {
-    @extend .button;
-    width: 200px;
-    height: 50px;
+    background: var(--blue);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    color: var(--white);
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    border: none;
+    &:hover,
+    &:focus {
+      background-color: #188ce8;
+      cursor: pointer;
+    }
   }
 }
 
