--- a/sass/sections/_header.scss
+++ b/sass/sections/_header.scss
@@ -1,5 +1,6 @@
 .style {
   border-bottom: 1px solid #ececec;
+  margin: 0 10px 0 15px;
 }
 a.active {
   color: var(--blue);
@@ -21,13 +22,13 @@ a.active {
   margin: auto;
 }
 
-.header-text {
+.header-text__menu {
   display: flex;
   margin: 0;
   padding: 0;
 }
 
-.header-text.links {
+.header-text__menu.links {
   gap: 50px;
   margin-left: 93px;
   margin-right: 330px;
@@ -73,7 +74,6 @@ a.active {
 }
 
 @media screen and (max-width: 480px) {
-  .header-text.links,
   .header-address {
     display: none;
   }
@@ -82,5 +82,53 @@ a.active {
     max-width: 100%;
     height: 60px;
     justify-content: space-between;
+  }
+  .test {
+    position: relative;
+  }
+  .menu-modal {
+    display: none;
+    &.is-open {
+      position: absolute;
+      display: flex;
+      flex-direction: column;
+      width: 480px;
+      background-color: white;
+      position: fixed;
+
+      .header-text__menu {
+        display: flex;
+        flex-direction: column;
+        gap: 32px;
+        &__menu-item {
+          display: flex;
+          color: #212121;
+          font-family: "Roboto";
+          font-style: normal;
+          font-weight: 500;
+          font-size: 40px;
+          line-height: 47px;
+          letter-spacing: 0.02em;
+        }
+      }
+
+      & + .menu-toggle {
+        display: none;
+      }
+
+      .button--close-menu {
+        display: inline-flex;
+      }
+    }
+  }
+
+  .header-text__menu {
+    max-width: 100%;
+  }
+}
+
+@media screen and (min-width: 481px) {
+  .toggle-button {
+    display: none;
   }
 }
