--- a/sass/sections/_header.scss
+++ b/sass/sections/_header.scss
@@ -87,6 +87,29 @@ a.active {
 }
 
 @media screen and (max-width: 480px) {
+  .detail-section {
+    max-width: 100%;
+    max-height: 100%;
+  }
+  .detail-section > ul {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
+  .work-container__items,
+  .image-items {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .customers-container ul {
+    max-width: 480px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0;
+    margin: 0 15px 0 15px;
+  }
+
   .header-address {
     display: none;
   }
@@ -101,10 +124,25 @@ a.active {
     &__nav {
       display: none;
       &.is-open {
+        max-width: 100%;
+        max-height: 100%;
+        transform: scale(1);
+        transition-duration: 250ms;
+        transition-timing-function: linear;
+        margin: auto;
+        z-index: 1;
+        .header-text__nav.is-hidden {
+          transform: scale(0);
+          background-color: var(--white);
+          position: absolute;
+          opacity: 0;
+          pointer-events: none;
+          visibility: hidden;
+        }
         display: flex;
         flex-direction: column;
-        width: 480px;
-        height: 796px;
+        max-width: 100%;
+        max-height: 100%;
         background-color: white;
         position: fixed;
         top: 0px;
@@ -118,7 +156,7 @@ a.active {
         .header-address {
           display: flex;
           flex-direction: column-reverse;
-          margin-top: 306px;
+          padding-top: 306px;
         }
         .header-contacts {
           justify-content: flex-start;
@@ -150,8 +188,8 @@ a.active {
         .header-social {
           display: flex;
           gap: 10px;
-          margin-bottom: 48px;
-          margin-top: 64px;
+          padding-bottom: 48px;
+          padding-top: 64px;
           &__items a {
             font-family: "Roboto";
             font-style: normal;
@@ -170,7 +208,7 @@ a.active {
     }
   }
   .header-text__menu {
-    margin-top: 48px;
+    padding-top: 48px;
     gap: 32px;
     a {
       font-family: "Roboto";
