--- a/sass/sections/_header.scss
+++ b/sass/sections/_header.scss
@@ -26,7 +26,8 @@ a.active {
   &__menu {
     display: flex;
     gap: 50px;
-    padding: 93px;
+    padding: 0;
+    margin-left: 93px;
   }
   &__nav {
     display: flex;
@@ -90,7 +91,11 @@ a.active {
       gap: 30px;
     }
   }
-
+  .responsive-img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
   .work-container__items,
   .image-items {
     display: flex;
@@ -116,12 +121,19 @@ a.active {
   }
   .header-text {
     gap: 32px;
+
     &__nav {
       display: none;
       &.is-open {
+        .hero-section {
+          background-image: url("./images/header.jpg");
+          max-width: 100%;
+        }
+        .button-close-menu {
+        }
         overflow: hidden;
         max-width: 100%;
-        max-height: 100%;
+        height: 100%;
         transform: scale(1);
         transition-duration: 250ms;
         transition-timing-function: linear;
@@ -137,8 +149,6 @@ a.active {
         }
         display: flex;
         flex-direction: column;
-        max-width: 100%;
-        max-height: 100%;
         background-color: white;
         position: fixed;
         top: 0px;
@@ -148,11 +158,18 @@ a.active {
           display: flex;
           flex-direction: column;
           gap: 32px;
+          &-item {
+            max-width: 100%;
+          }
         }
         .header-address {
           display: flex;
           flex-direction: column-reverse;
           padding-top: 306px;
+          align-items: flex-start;
+          margin: 0;
+          padding-left: 93px;
+          padding-right: 167px;
         }
         .header-contacts {
           justify-content: flex-start;
