--- a/sass/base/_buttons.scss
+++ b/sass/base/_buttons.scss
@@ -61,7 +61,7 @@
 .products-section {
   padding: 92px 0 50px 0;
   margin: auto;
-  width: 1200px;
+  width: 100%;
 
   &__list {
     display: flex;
