--- a/sass/screen/_tablet.scss
+++ b/sass/screen/_tablet.scss
@@ -1,8 +1,147 @@
-@media screen and (min-width: 481px) {
+@media screen and (min-width: 481px) and (max-width: 769px) {
   .toggle-button {
+    display: none;
+  }
+  .work-container {
     display: none;
   }
   .button-close-menu {
     display: none;
+  }
+
+  /* Header */
+  .header-address.menu {
+    margin-left: 21px;
+    flex-direction: column;
+    gap: 10px;
+    align-items: flex-start;
+  }
+  .header-text {
+    &__nav {
+      align-items: center;
+      gap: 93px;
+    }
+    &__menu {
+      margin: 0;
+    }
+  }
+  .header-contacts {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.02em;
+  }
+
+  .container.header-text {
+    gap: 30px;
+  }
+
+  .detail-section {
+    max-width: 100%;
+    max-height: 100%;
+    padding-top: 178px;
+
+    & ul {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+    }
+  }
+  .hero-section {
+    background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/hero-tablet.jpg) no-repeat;
+    background-size: cover;
+    gap: 30px;
+  }
+  .main-section {
+    height: 400px;
+  }
+
+  .customers-container ul {
+    max-width: 480px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0;
+    margin: 30px 15px 0 15px;
+  }
+  .customers-container {
+    padding: 0;
+    margin: 60px auto;
+  }
+
+  /* Footer */
+  .footer-container.container {
+    display: block;
+    max-width: fit-content;
+  }
+  .social-section {
+    flex-direction: column;
+    width: auto;
+    gap: 30px;
+  }
+  .subscribe-form {
+    flex-direction: column;
+    align-items: center;
+  }
+  .subscribe-email {
+    padding: 0;
+  }
+  .contacts,
+  .address {
+    align-items: center;
+  }
+  .footer-text {
+    display: flex;
+    justify-content: center;
+  }
+  .subscribe-button {
+    margin-bottom: 60px;
+  }
+  .modal {
+    max-width: 90%;
+    &__container {
+      max-width: 90%;
+    }
+    & textarea {
+      width: auto;
+    }
+  }
+
+  /* Our Team */
+
+  .image-items {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 15px;
+    margin-right: 15px;
+    justify-items: center;
+  }
+
+  /* Regular Customer */
+  .customers-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .customers-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  /* Portfolio */
+  .products-section {
+    max-width: 80%;
+    margin-left: 15px;
+    &__list {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+    }
+  }
+  .portfolio-list {
+    display: flex;
+    flex-direction: column;
   }
 }
