--- a/sass/screen/_tablet.scss
+++ b/sass/screen/_tablet.scss
@@ -85,9 +85,6 @@
     flex-direction: column;
     align-items: center;
   }
-  .subscribe-email {
-    padding: 0;
-  }
   .contacts,
   .address {
     align-items: center;
@@ -126,22 +123,27 @@
     align-items: center;
   }
   .customers-list {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
   }
 
   /* Portfolio */
   .products-section {
-    max-width: 80%;
-    margin-left: 15px;
+    max-width: 100%;
     &__list {
       display: flex;
-      flex-wrap: wrap;
-      justify-content: flex-start;
+      justify-content: center;
     }
   }
+
+  .portfolio-container {
+    max-width: 769px;
+  }
   .portfolio-list {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .porfolio-card {
+    width: 354px;
+    height: 440px;
   }
 }
