--- a/sass/screen/_mobile.scss
+++ b/sass/screen/_mobile.scss
@@ -16,11 +16,8 @@
     max-width: 100%;
     height: auto;
   }
-  .work-container__items,
-  .image-items {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  .work-container {
+    display: none;
   }
   .customers-container ul {
     max-width: 480px;
@@ -83,14 +80,12 @@
         .header-address {
           display: flex;
           flex-direction: column-reverse;
-          padding-top: 306px;
           align-items: flex-start;
-          margin: 0;
-          padding-left: 93px;
-          padding-right: 167px;
+          margin-left: 40px;
         }
         .header-contacts {
           justify-content: flex-start;
+
           & svg {
             display: none;
           }
@@ -121,6 +116,8 @@
           gap: 10px;
           padding-bottom: 48px;
           padding-top: 64px;
+          padding-inline-start: 0;
+          margin-left: 40px;
           &__items a {
             font-family: "Roboto";
             font-style: normal;
@@ -146,6 +143,7 @@
     padding-top: 48px;
     gap: 32px;
     max-width: fit-content;
+    margin-left: 40px;
     a {
       font-family: "Roboto";
       font-style: normal;
